--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon"
+    "start": "nodemon app.js"
   },
   "author": "",
   "license": "ISC",
@@ -34,12 +34,8 @@
     "nocache": "^4.0.0",
     "nodemailer": "^6.9.7",
     "parser": "^0.1.4",
-<<<<<<< HEAD
     "razorpay": "^2.9.2",
     "sharp": "^0.33.2"
-=======
-    "razorpay": "^2.9.2"
->>>>>>> a27cfdea6c9310c516530ca75cdd89da63a7b324
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
